syntax = "proto3";
 
option go_package = ".;main";
 
package student;
 
service StudentServer { 
   rpc GetStudentData (GetStudentDataReq) returns (GetStudentDataRes) {}
}
 
message GetStudentDataReq { 
   int64  student_id = 1;
   string class = 2;
}
 
message GetStudentDataRes { 
   string student_name = 1;
   int64 student_heigh = 2;
   int64 student_weight = 3;
}
